# land-DA_update

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build_all.sh  build_all_aws.sh  build_all_hera.sh  do_landDA.sh  do_landDA_release.sh  do_sample_landDA_test.sh  do_snowDA.sh  env_GDASApp  ioda_mods_hera  jedi_mods_IODA  jedi_mods_IODA_FV3  jedi_mods_ioda  land_mods_aws  land_mods_hera  letkf_create_ens.py  make_links.sh  run_apply_incr.sh  run_create_ens.sh  run_ioda_converter.sh  run_iodav2tov3.sh  run_jedi_letkf.sh  settings_DA_ERA5  settings_DA_IMS  settings_DA_release_template  settings_DA_template  submit_landDA.sh  submit_snowDA.sh  workflow_mods_bash
add_jedi_incr/: aws_modules  build.sh
add_jedi_incr/sorc/: CMakeLists.txt  Makefile  Makefile.sh  NoahMPdisag_module.f90  apply_incr_noahmp_snow.f90  build.sh
add_jedi_incr/sorc/cmake/: add_jedi_inc_compiler_flags.cmake
add_jedi_incr/sorc/exec/: apply_incr  apply_incr_nml
jedi/fv3-jedi/Data/: make_links.sh
jedi/fv3-jedi/letkf/: letkf_snow_IMS_C48.yaml  letkf_snow_IMS_C768.yaml  letkf_snow_IMS_GHCN_C48.yaml  letkf_snow_IMS_GHCN_C768.yaml  letkf_snow_IMS_GHCN_C96.yaml  letkf_snow_IMS_GHCN_C96.yaml_IMSwSOAR  letkf_snow_offline_GHCN_C96.yaml  letkf_snow_offline_IMS_GHCN_C96.yaml
jedi/fv3-jedi/yaml_files/: C768.letkfoi_snow.yaml  GHCN.yaml  GTS.yaml  IMS.yaml  SMAP.yaml  _letkfoi_replay_GFSv17.yaml  gfs-land-fractional.yaml  (+21 more)
jedi/ioda/: imsFV3_scf2ioda_newV2.py  imsfv3_scf2ioda.py  imsfv3_scf2iodaTemp.py  imsfv3_scf2ioda_obs40.py  imsfv3_scf2ioda_obs40.py_aws  make_links.sh  viirsfv3_scf2ioda_obs40.py
(+12 files in other folders)
